# puma

./: .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .readthedocs.yml  README.md  Untitled.ipynb  apt.txt  environment.yml  installer.sh  publications.md  requirements.txt  setup.py
cpp/: CMakeLists.txt
cpp/examples/: README.md  examples.cpp
cpp/initproject/: .gitignore  CMakeLists.txt  initproject.cpp  makeAll  makeAll.sh
cpp/src/: createCMakeLists_src  createCMakeLists_src.sh  main.cpp  operation.h  puma.h
cpp/src/export/: export.h
cpp/src/export/3D_Tiff/: export_3DTiff.cpp  export_3DTiff.h  export_3DTiff_Workspace.cpp
cpp/src/export/STL/: err.h  export_STL.cpp  export_STL.h  export_STL_helper.cpp  export_STL_helper.h  fio.h  ostr.h
cpp/src/export/binary/: export_bin.cpp  export_bin.h
cpp/src/export/textfile/: export_textfile.cpp  export_textfile.h  export_textfile_workspace.cpp
cpp/src/export/vtk/: export_vtk.cpp  export_vtk.h
cpp/src/filter/bilateral/: bilateralfilter.cpp  bilateralfilter.h
cpp/src/filter/mean/: meanfilter3d.cpp  meanfilter3d.h
cpp/src/filter/median/: medianfilter3d.cpp  medianfilter3d.h
cpp/src/generation/: generate.h
cpp/src/generation/porespace/: porespace.cpp  porespace.h
cpp/src/generation/randomfibers/: curvedcirclefiber.cpp  curvedcirclefiber.h  curvedflowerfiber.cpp  fiber.cpp  fiber.h  prescribedfibers.cpp  prescribedfibers.h  (+6 more)
cpp/src/import/: importdata.h
cpp/test/: README.md  createCMakeLists_test  createCMakeLists_test.sh  mastertest.cpp  mastertest.h
cpp/test/testframework/: color.h  main_testing.cpp  subtest.cpp  subtest.h  testresult.h
cpp/test/testsuites/: bilateralfilter_test.cpp  ejelectricalconductivity_test.cpp  ejthermalconductivity_test.cpp  example_test.cpp  export3dtiff_test.cpp  exportbin_test.cpp  exportstl_test.cpp  exporttextfile_test.cpp  exportvtk_test.cpp  fvanisotropicthermalconductivity_test.cpp  fvelectricalconductivity_test.cpp  fvthermalconductivity_test.cpp  generaterandomfibers_test.cpp  generaterandomspheres_test.cpp  generatetpms_test.cpp  import3dtiff_test.cpp  importbin_test.cpp  isosurface_test.cpp  matrix_test.cpp  meanfilter3d_test.cpp  meaninterceptlength_test.cpp  medianfilter3d_test.cpp  orientation_test.cpp  particlescuberilletortuosity_test.cpp  porespace_test.cpp  pstring_test.cpp  surfacearea_test.cpp  triangle_test.cpp  vector3d_test.cpp  vector4d_test.cpp  volumefraction_test.cpp
install/TexGen/Core/: AdjustMeshInterference.cpp  AdjustMeshInterference.h  BasicVolumes.cpp  BasicVolumes.h  CMakeLists.txt  DefaultProperties.h  Domain.cpp  Domain.h  DomainPlanes.cpp  DomainPlanes.h  Elements.cpp  Elements.h  FibreDistribution.cpp  FibreDistribution.h  FibreDistribution1DQuad.cpp  FibreDistribution1DQuad.h  FibreDistributionConst.cpp  FibreDistributionConst.h  GeometrySolver.cpp  GeometrySolver.h  Interpolation.cpp  Interpolation.h  InterpolationAdjusted.cpp  InterpolationAdjusted.h  InterpolationBezier.cpp  InterpolationBezier.h  InterpolationCubic.cpp  InterpolationCubic.h  InterpolationLinear.cpp  InterpolationLinear.h  LinearTransformation.cpp  LinearTransformation.h  Logger.cpp  Logger.h  Materials.cpp  Materials.h  Matrix.h  MatrixUtils.h  Mesh.cpp  Mesh.h  (+141 more)
install/TexGen/Examples/: 2dweave.cpp  3dweave.cpp  CMakeLists.txt  cotton.cpp  polyester.cpp
install/TexGen/Export/: CMakeLists.txt  Exporter.cpp  Exporter.h  FindOpenCascade.cmake
install/TexGen/GUI/: AngleInterlock.xpm  CMakeLists.txt  CircleRangeCtrl.cpp  CircleRangeCtrl.h  CompleteDialog.cpp  CompleteDialog.h  ControlsWindow.cpp  ControlsWindow.h  CustomWidget.cpp  CustomWidget.h  DomainPlanesDialog.cpp  DomainPlanesDialog.h  DropTarget.cpp  DropTarget.h  Embedded.i  Embedded.py  EmbeddedPythonFunctions.cpp  EmbeddedPythonFunctions.h  Embedded_wrap.cxx  FindwxWidgets.cmake  GUI.rc  LayerToLayer.xpm  LayersOffsetDialog.cpp  LayersOffsetDialog.h  LoggerGUI.h  Modeller.cpp  Modeller.h  OffsetAngleInterlock.xpm  Orthogonal.xpm  PatternDraftDialog.cpp  PatternDraftDialog.h  PrecompiledHeaders.h  PythonConsole.cpp  PythonConsole.h  PythonConverter.cpp  PythonConverter.h  PythonWrapper.cpp  PythonWrapper.h  RangeValidator.cpp  RangeValidator.h  (+28 more)
install/TexGen/Octree/: Array.cpp  Array.hpp  CMakeLists.txt  LICENSE.txt  Octree.cpp  Octree.hpp  OctreeAuxiliary.cpp  OctreeAuxiliary.hpp  OctreeExample.cpp  OctreeImplementation.cpp  OctreeImplementation.hpp  OctreeStreamOut.cpp  OctreeStreamOut.hpp  OctreeTest.cpp  OctreeTest.hpp  Primitives.hpp  Vector3f.cpp  Vector3f.hpp  build-gcc.bat  build-vc.bat  hxa7241-octree-cpp.readme.txt  hxa7241_general.hpp  hxa7241_graphics.hpp  octree-general-cpp_hxa7241_2005.html
install/TexGen/ProfileTests/: CMakeLists.txt  ProfileTests.cpp  TextileFactory.cpp  TextileFactory.h
install/TexGen/Python/: CMakeLists.txt  Core.i  Core.py  Core_wrap.h  Export.i  FindPythonSitePackages.cmake  Renderer.i  __init__.py
install/TexGen/Renderer/: CMakeLists.txt  CustomInteractorStyle.cpp  CustomInteractorStyle.h  PrecompiledHeaders.cpp  PrecompiledHeaders.h  TexGenRenderer.cpp  TexGenRenderer.h
install/TexGen/Triangle/: CMakeLists.txt  triangle_api.c  triangle_api.h  triangle_export.h  triangle_version.h
install/TexGen/UnitTests/: CMakeLists.txt  ClosestPointsTest.txt  DryFibreExportTests.cpp  DryFibreExportTests.h  DryFibreULSurfaceTest.inp  DryFibreWholeSurfaceTest.inp  FibreDistribTests.cpp  FibreDistribTests.h  FindCppUnit.cmake  GeometricTests.cpp  GeometricTests.h  Main.cpp  MesherTests.cpp  MesherTests.h  MiscFunctionTests.cpp  MiscFunctionTests.h  PatternDraftTests.cpp  PatternDraftTests.h  PropertyTests.cpp  PropertyTests.h  RotatedVoxelMeshTest.inp  SolverTests.cpp  SolverTests.h  Test3dLayerToLayerPatternAlternating.txt  Test3dLayerToLayerPatternBtoT.txt  Test3dLayerToLayerPatternTToB.txt  TestUtilities.cpp  TestUtilities.h  TetgenExportTests.cpp  TetgenExportTests.h  TetgenTestPeriodic.inp  Textile3DTests.cpp  Textile3DTests.h  TextileFactory.cpp  TextileFactory.h  VoxelContinuumTest.eld  VoxelContinuumTest.inp  VoxelContinuumTest.ori  VoxelExportTests.cpp  VoxelExportTests.h  (+4 more)
(+896 files in other folders)
